code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_28.wast
(assert_invalid
  (module
    (func $type-value-empty-in-loop
      (i32.const 0)
      (loop (block (result i32)) (drop))
    )
  )
  "type mismatch"
)